--- a/src/editor_settings.json
+++ b/src/editor_settings.json
@@ -1,4 +1,11 @@
 {
-  "editor-x-zoom":80.0,
-  "editor-y-zoom":80
+  "editor-x-zoom":50.0,
+  "editor-y-zoom":80.0,
+  "default-page-margin-left":10,
+  "default-page-margin-right":10,
+  "default-page-margin-up":10,
+  "default-page-margin-down":10,
+  "default-draw-scale":0.75,
+  "default-margin-up-left":10,
+  "default-margin-down-right":10
 }
